--- a/reports/index.html
+++ b/reports/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
 
-    <title>The HTML5 Herald</title>
-    <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
+    <title>OpenHTMLToPDF Demo</title>
+    <meta name="description" content="OpenHTMLToPDF Demo">
+    <meta name="author" content="kaleguy">
     <bookmarks class="bookmarks">
         <bookmark name="Table" href="#myGrid"></bookmark>
         <bookmark name="HighCharts" href="#container"></bookmark>
@@ -22,7 +22,7 @@
 <div class="report">
     <h1>Table Demo</h1>
     <div>
-      <div id="myGrid" class="ag-theme-balham" style="height: 100%; page-break-after: always"></div>
+      <div id="myGrid" style="height: 100%; page-break-after: always"></div>
     </div>
     <h1>HighChart Demo</h1>
     <div id="container" style="page-break-after: always"></div>
